added CustomAutoCompleteTextView.kt to extend and override length that is enoughToFilter to 0 and to showSuggestions on Focus Change for the Country selection widget

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.main.MainFragment">
 
     <!-- The search and dropdown box -->
-    <AutoCompleteTextView
+    <com.thapelo.covidstats.ui.main.CustomAutoCompleteTextView
         android:id="@+id/autocomplete_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
